--- a/src/app/personal-details/personal-details.component.html
+++ b/src/app/personal-details/personal-details.component.html
@@ -4,90 +4,82 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill">
+  <div class="container-fluid">
+    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button> -->
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link active" aria-current="page"href="#">About</a>
+        <a class="nav-link active" aria-current="page" href="#">Profile</a>
+        <a class="nav-link  active" aria-current="page" href="#">Certificates</a>
+        <a class="nav-link active"aria-current="page" href="#">Contacts</a>
+      </div>
+  </div>
+</nav>
+
 <body class="p-3 m-0 border-0 bd-example">
-
-
-  <nav class="navbar navbar-dark bg-dark">
-    <!-- Navbar content -->
-
-    <ul class="nav nav-pills">
-
-      <li class="nav-item"><small>
-          <a class="nav-link" href="#">PortFolio</a></small>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link ">Certificates</a>
-      </li>
-
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-          aria-expanded="false">Menu</a>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Menu</a></li>
-          <li><a class="dropdown-item" href="#">Home</a></li>
-          <li><a class="dropdown-item" href="#">Portfolio</a></li>
-          <li><a class="dropdown-item" href="#">contact</a></li>
-          <li><a class="dropdown-item" href="#">Cover Letter</a></li>
-          <li>
-            <hr class="dropdown-divider">
-          </li>
-          <li><a class="dropdown-item" href="#">Separated link</a></li>
-        </ul>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="#">GitHub</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="#">Skills</a>
-      </li>
-
-
-      <li class="nav-item">
-        <a class="nav-link" href="#">+27726874771</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="#">thulisile.ma98@gmail.com</a>
-      </li>
-
-
-    </ul>
-  </nav>
-  <!-- End Example Code -->
-
-
+  
 
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    
     <div class="carousel-inner">
       <div class="carousel-item active">
+
+
         <img
           src="https://www.designmadeingermany.de/2013/wp-content/uploads/2014/05/2437c225afb41ca2c6cf768c24a10da3.png"
           class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Hey, my name is</h5>
+
+        <div class="carousel-caption d-none d-md-block justify-center">
+
+          <h5 class="caption">Hey, my name is</h5>
           <h1> Margret Mashego <br> I'm a Developer</h1>
 
         </div>
       </div>
-      <div class="carousel-item">
+
+      <div class="carousel-item" >
         <img
           src="https://www.jobboardfinder.com/news/wp-content/uploads/2017/09/ada-lovelace-woman-computer-programmer-e1460129211828-min-624x314.jpg"
           class="d-block w-100" alt="...">
+
+<div class="carousel-caption d-none d-md-block justify-center">
+          <h2>
+           I am a very dynamic individual who works hard, and knows how to balance working very hard and having fun.
+           fun to work with and adapt easily, i love challenges and open to critiques.
+
+           My weakeness point would be "I have trouble saying No", simply because i love helping others
+           and my Strength would be that i am very much self-descipline
+          </h2>
+        </div>
       </div>
+
       <div class="carousel-item">
-        <img src="https://thecamels.org/wp-content/uploads/2021/03/certification-600x400.jpg" class="d-block w-100"
+        <img src="https://cdn.images.express.co.uk/img/dynamic/59/590x/secondary/MacBook-Air-2018-1476685.jpg?r=1535119547834" class="d-block w-100"
           alt="...">
+           
+       <div class="carousel-caption d-none d-md-block justify-center">
+        <h2>favorite Quote</h2>
+          <h4>
+           "You dont need a Degree in computer science to work in tech
+           you need gumption and focus, it's ok not to know everything ,
+           <br> as long as you show that you are 
+           intelligent enough to learn it" 
+          </h4>
+          <h6>Lynn Root backend engineer for spotify</h6>
       </div>
+
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
+
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
@@ -100,6 +92,6 @@
 
 
 
-</body>
+<!-- </body> -->
 
 <router-outlet></router-outlet>
