--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+
+@font-face{
+    font-family: 'Roboto';
+   src: url(../src/assets/fonts/Roboto-BlackItalic.ttf) format("truetype");
+    
+
+}
+
+.carousel-caption d-none d-md-block{
+
+    font-family: 'Roboto';
+    font-size: smaller;
+
+
+}
