added my information on portfolio component

--- a/src/app/personal-details/personal-details.component.scss
+++ b/src/app/personal-details/personal-details.component.scss
@@ -71,9 +71,9 @@ position: sticky;
     bottom: 280px;
 }
 
-.name{
+.occupation{
     color: rgb(131, 32, 78);
-    font-weight: bolder;
+    font-weight: bold;
     font-family: Verdana;
 }
     
