--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,1 +1,21 @@
-<p>portfolio works!</p>
+<div class="card-group">
+  <div class="card  text-bg-danger mb-3">
+    <img src="https://www.pixelstalk.net/wp-content/uploads/2016/07/Landscape-mountains-nature-fog-pictures.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Ecommerce App</h5>
+      <p class="card-text">This is an ecommerce ionic application, selling iphones,laptops and perfumes Iam  using A free RestAPI (DummyJSON)   </p>
+    </div>
+    <div class="card-footer">
+      <a href="#" class="btn btn-secondary" >https://github.com/thulisile98/E-store</a>
+    </div>
+  </div>
+  <div class="card  text-bg-danger mb-3">
+    <img src="https://www.pixelstalk.net/wp-content/uploads/2016/07/Landscape-mountains-nature-fog-pictures.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">ionic Weather Application</h5>
+      <p class="card-text">This is an ionic weather application using a  api from OpenweatherMap </p>
+    </div>
+    <div class="card-footer">
+       <a href="#" class="btn btn-secondary" >https://github.com/thulisile98/E-store</a>
+    </div>
+  </div>
