--- a/src/app/personal-details/personal-details.component.html
+++ b/src/app/personal-details/personal-details.component.html
@@ -39,7 +39,7 @@
 
           <h5 class="caption">Hey, my name is</h5>
           <h1 class="name"> Margret Mashego</h1> 
-          <h2>I'm a Developer</h2>
+          <h2>and I'm a Developer</h2>
             <a href="#" class="btn btn-secondary">Download Cv</a>
         </div>
       </div>
@@ -50,13 +50,13 @@
           class="d-block w-100" alt="...">
 
 <div class="carousel-caption d-none d-md-block justify-center">
-          <h2>
+          <h3>
            I am a very dynamic individual who works hard, and knows how to balance working very hard and having fun.
            fun to work with and adapt easily, i love challenges and open to critiques.
 
            My weakeness point would be "I have trouble saying No", simply because i love helping others
            and my Strength would be that i am very much self-descipline
-          </h2>
+          </h3>
         </div>
       </div>
 
@@ -66,12 +66,12 @@
            
        <div class="carousel-caption d-none d-md-block justify-center">
         <h2>favorite Quote</h2>
-          <h4>
+          <h3>
            "You dont need a Degree in computer science to work in tech
            you need gumption and focus, it's ok not to know everything ,
            <br> as long as you show that you are 
            intelligent enough to learn it" 
-          </h4>
+          </h3>
           <h6>Lynn Root backend engineer for spotify</h6>
       </div>
 
