--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,24 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill">
+  <div class="container-fluid">
+    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button> -->
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page"  routerLink="/PersonalDetails">Home</a>
+        <a class="nav-link active" aria-current="page" routerLink="/About">About</a>
+        <a class="nav-link  active" aria-current="page"routerLink="/Certificates">Cv</a>
+        <a class="nav-link active" aria-current="page"routerLink="/Portfolio">Portfolio</a>
+        <a class="nav-link active"aria-current="page" routerLink="/Contacts">Contacts</a>
+      </div>
+  </div>
+</nav>
+
+<head>
+
+   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
 <div class="card w-100" style="width: 18rem;">
   <div class="row g-0">
     <div class="col-md-4">
@@ -5,16 +26,29 @@
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title">About Me</h5>
+        <h5 class="card-title">About Me.</h5>
         <p class="card-text">A motivated software developer intern from Tshwane university of technology 
             <br>with less than 1 year of experience in developing software applications<br>
-             having a strong communication and leadership skills.
+             having a strong communication and leadership<br> and Coding skills.
         </p>
-        <p class="card-text2">
-          I am  24 years old, originally from mpumalanga in kwandebele,
-           <br>my love for programming started when I was doing Grade 12 <br>when a student from university  came to our school for career expo <br>
-            I knew from then that i want to be a programmer. 
-        </p>
+         <div  class="row">
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>11 July 1998</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+27 72 687 4771</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Gauteng</span></li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>National Diploma</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>thulisile.ma98@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Availability:</strong> <span>immediately</span></li>
+                </ul>
+              </div>
+            </div>
         <a routerLink=""class="btn btn-secondary">Back to Home</a>
       </div>
     </div>
