--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,1 +1,16 @@
-<p>contacts works!</p>
+
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill">
+  <div class="container-fluid">
+    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button> -->
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page"  routerLink="/PersonalDetails">Home</a>
+        <a class="nav-link active" aria-current="page" routerLink="/About">About</a>
+        <a class="nav-link  active" aria-current="page"routerLink="/Certificates">Cv</a>
+        <a class="nav-link active" aria-current="page"routerLink="/Portfolio">Portfolio</a>
+        <a class="nav-link active"aria-current="page" routerLink="/Contacts">Contacts</a>
+      </div>
+  </div>
+</nav>
