--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,5 +1,20 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill">
+  <div class="container-fluid">
+    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button> -->
+     <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page"  routerLink="/PersonalDetails">Home</a>
+        <a class="nav-link active" aria-current="page" routerLink="/About">About</a>
+        <a class="nav-link  active" aria-current="page"routerLink="/Certificates">Cv</a>
+        <a class="nav-link active" aria-current="page"routerLink="/Portfolio">Portfolio</a>
+        <a class="nav-link active"aria-current="page" routerLink="/Contacts">Contacts</a>
+      </div>
+  </div>
+</nav>
+
 <div class="card-group">
-  <div class="card  text-bg-danger mb-3">
+  <div class="card  text-bg-dark mb-3">
     <img src="https://www.pixelstalk.net/wp-content/uploads/2016/07/Landscape-mountains-nature-fog-pictures.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Ecommerce App</h5>
@@ -9,7 +24,7 @@
       <a href="#" class="btn btn-secondary" >https://github.com/thulisile98/E-store</a>
     </div>
   </div>
-  <div class="card  text-bg-danger mb-3">
+  <div class="card  text-bg-dark mb-3">
     <img src="https://www.pixelstalk.net/wp-content/uploads/2016/07/Landscape-mountains-nature-fog-pictures.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">ionic Weather Application</h5>
