used openweather api to display current weather and date

--- a/src/app/user-location/user-location.component.html
+++ b/src/app/user-location/user-location.component.html
@@ -1,1 +1,14 @@
 <div id="map"></div>
+
+<div *ngIf="weather" class="weatherData">
+  <span class="city"> {{weather.name}}</span>
+    <span class="date">{{date | date}}</span>
+
+    <div class="icon">
+      <img src="http://openweathermap.org/img/wn/{{weather.weather[0].icon}}@2x.png"  alt="">
+    </div>
+
+    <span class="description">{{weather.t}}</span>
+    <span class="description"> {{weather.weather[0].main}}</span>
+    <span class="description">{{weather.temp}}</span>
+  </div>
