--- a/src/app/user-location/user-location.component.scss
+++ b/src/app/user-location/user-location.component.scss
@@ -2,3 +2,14 @@
     height: 100vh;
     width: 80vh;
 }
+
+.name{
+    font-size: larger;
+    color: rgb(190, 47, 159);
+
+}
+.weatherData
+{
+    width: -20vh;
+    height: 100vh;
+}
