--- a/src/app/personal-details/personal-details.component.scss
+++ b/src/app/personal-details/personal-details.component.scss
@@ -16,6 +16,18 @@ z-index: 10;
 
 }
 
+.btn{
+font-weight: 600;
+  border-color: rgb(141, 8, 97);
+  background-color:rgb(141, 8, 97);
+  color:white;
+}
+
+.nav.container-fluid.navbar-nav a {
+color: rgb(141, 8, 97);
+  font-weight: 100;
+}
+
 .nav-item
 {
     .nav-link{
@@ -85,55 +97,29 @@ position: sticky;
   font-family: 'Poppins', sans-serif;
 }
 
-.wrapper{
-  display: flex;
+.image{
+  background-size: cover;
+  background-position: 50%;
 }
-.wrapper .static-txt{
-  color: #fff;
-  font-size: 60px;
-  font-weight: 400;
-}
-.wrapper .dynamic-txts{
-  margin-left: 15px;
-  height: 90px;
-  line-height: 100px;
-  overflow: hidden;
-}
-.dynamic-txts li{
-  list-style: none;
+
+
+.name{
+   
   color: rgb(131, 32, 78);
-  font-size: 60px;
+  font-size: 70px;
   font-weight: 500;
-  position: relative;
-  top: 0;
-  animation: slide 12s steps(4) infinite;
 }
-@keyframes slide {
-  100%{
-    top: -360px;
-  }
+
+.caption{
+  
+  font-size: 40px;
+  font-weight: 500;
 }
-.dynamic-txts li span{
-  position: relative;
-  margin: 5px 0;
-  line-height: 90px;
+.desc{
+
+  font-size: 40px;
+  font-weight: 500;
+
 }
-.dynamic-txts li span::after{
-  content: "";
-  position: absolute;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: grey;
-  border-left: 2px solid rgb(131, 32, 78);
-  animation: typing 3s steps(9) infinite;
-}
-@keyframes typing {
-  40%, 60%{
-    left: calc(100% + 30px);
-  }
-  100%{
-    left: 0;
-  }
-}
+
 
