--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
   <div class="container-fluid">
     <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button> -->
-      <div class="navbar-nav">
+      <div class="navbar-nav mb-0 h4">
         <a class="nav-link active" aria-current="page"  routerLink="/PersonalDetails">Home</a>
         <a class="nav-link active" aria-current="page" routerLink="/About">About</a>
         <a class="nav-link  active" aria-current="page"routerLink="/Certificates">Cv</a>
@@ -29,7 +29,10 @@
         <h5 class="card-title">About Me.</h5>
         <p class="card-text">A motivated software developer intern from Tshwane university of technology 
             <br>with less than 1 year of experience in developing software applications<br>
-             having a strong communication and leadership<br> and Coding skills.
+             having a strong communication, leadership<br> and Coding skills.
+        </p>
+        <p>
+          I 
         </p>
          <div  class="row">
               <div class="col-lg-6">
@@ -49,7 +52,7 @@
                 </ul>
               </div>
             </div>
-        <a routerLink=""class="btn btn-secondary">Back to Home</a>
+        <a routerLink=""class="btn">Back to Home</a>
       </div>
     </div>
   </div>
