--- a/src/app/cv/certificates.component.html
+++ b/src/app/cv/certificates.component.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
   <div class="container-fluid">
     <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button> -->
-      <div class="navbar-nav">
+      <div class="navbar-nav mb-0 h4">
         <a class="nav-link active" aria-current="page"  routerLink="/PersonalDetails">Home</a>
         <a class="nav-link active" aria-current="page" routerLink="/About">About</a>
         <a class="nav-link  active" aria-current="page"routerLink="/Certificates">Cv</a>
