--- a/src/app/personal-details/personal-details.component.html
+++ b/src/app/personal-details/personal-details.component.html
@@ -7,17 +7,18 @@
 
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light nav-fill">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
   <div class="container-fluid">
     <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button> -->
-      <div class="navbar-nav">
+      <div class="navbar-nav mb-0 h4">
         <a class="nav-link active" aria-current="page"  routerLink="/PersonalDetails">Home</a>
         <a class="nav-link active" aria-current="page" routerLink="/About">About</a>
         <a class="nav-link  active" aria-current="page"routerLink="/Certificates">Cv</a>
         <a class="nav-link active" aria-current="page"routerLink="/Portfolio">Portfolio</a>
         <a class="nav-link active"aria-current="page" routerLink="/Contacts">Contacts</a>
+        
       </div>
   </div>
 </nav>
@@ -36,17 +37,16 @@
 
         <div class="carousel-caption d-none d-md-block ">
 
-          <h5 class="caption">Hey, my name is</h5>
-          <h1 class="name"> Margret Mashego</h1> 
-          <div class="wrapper">
-         <div class="static-txt">I'm a</div>
-        <ul class="dynamic-txts">
-      <li><span>Designer</span></li>
-      <li><span>Developer</span></li>
-    </ul>
-     </div>
-            <a routerLink=""class="btn btn-secondary">Download Cv</a>
+          <h2 class="caption">Hey, my name is</h2>
+          <h2 class="name"> Margret Mashego</h2> 
+          <h1 class="desc"> I'm a Developer</h1>
+
+          <a routerLink=""class="btn">Download Cv</a>
+          </div>
+            
         </div>
+
+        
       </div>
 
       <div class="carousel-item" >
