improved my ui, made my home component responsive, added a loaction/map marker to navigate to my userlocation omponent and configured routing for it

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -12,14 +12,11 @@
     color:rgb(131, 32, 78) ;
 
 }
-.card-text{
+.title{
  
     color: white;
 }
-.card-text2{
 
-    color: white;
-}
 
 .btn{
     font-weight: 600;
