--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,10 +1,14 @@
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <!-- Font Awesome Kit -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <script src="https://kit.fontawesome.com/a076d05399.js"></script> 
 
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
+
+
+<div class="container">
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
   <div class="container-fluid">
     <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -15,11 +19,10 @@
         <a class="nav-link  active" aria-current="page"routerLink="/Certificates">Cv</a>
         <a class="nav-link active" aria-current="page"routerLink="/Portfolio">Portfolio</a>
         <a class="nav-link active"aria-current="page" routerLink="/Contacts">Contacts</a>
+        <a class='fas fa-map-marked-alt' routerLink="/UserLocation" style='font-size:48px;color:rgb(196, 47, 151)'></a>
       </div>
   </div>
 </nav>
-
-<div class="container">
    <div class="contact-parent">
       <div class="contact-child child1">
          <p>
@@ -41,7 +44,7 @@
       </div>
       <div class="contact-child child2">
          <div class="inside-contact">
-            <h2>Contact Me</h2>
+            <h2 class="contact">Contact Me</h2>
 
             <p>Name *</p>
             <input id="txt_name" type="text" Required="required">
@@ -53,7 +56,7 @@
             <input id="txt_subject" type="text" Required="required">
             <p>Message *</p>
             <textarea id="txt_message" rows="4" cols="20" Required="required" ></textarea>
-            
+
             <div class="d-grid gap-2">
             <a routerLink=""class="btn">SEND</a>
             </div>
