--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
   <div class="container-fluid">
     <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,6 +10,7 @@
         <a class="nav-link  active" aria-current="page"routerLink="/Certificates">Cv</a>
         <a class="nav-link active" aria-current="page"routerLink="/Portfolio">Portfolio</a>
         <a class="nav-link active"aria-current="page" routerLink="/Contacts">Contacts</a>
+        <a class='fas fa-map-marked-alt' routerLink="/UserLocation" style='font-size:48px;color:rgb(196, 47, 151)'></a>
       </div>
   </div>
 </nav>
@@ -26,33 +28,36 @@
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title">About Me.</h5>
+        <h1 class="card-title">About Me.</h1>
+        <h3 class="title">Developer & Designer</h3>
         <p class="card-text">A motivated software developer intern from Tshwane university of technology 
             <br>with less than 1 year of experience in developing software applications<br>
              having a strong communication, leadership<br> and Coding skills.
         </p>
         <p>
-          I 
+          I am a web developer. I can provide clean code and pixel perfect design,<br> my favourite programming language is C#
+ and my first programming language was C++, I am Oracle Certified (Java OCA JSE8) And Microsoft Certified (AZ-900)
+ <br> and I also completed my MTN Business App Academy Intermediate POE and obtained my Certificate of completion <br> and lastly I am  LEMON certified it is a  leadership skills training from Hosi Academy
         </p>
          <div  class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>11 July 1998</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.anegel.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+27 72 687 4771</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Gauteng</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>National Diploma</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>National Diploma IT(software)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>thulisile.ma98@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Availability:</strong> <span>immediately</span></li>
                 </ul>
               </div>
+               <a routerLink=""class="btn">Back to Home</a>
             </div>
-        <a routerLink=""class="btn">Back to Home</a>
       </div>
     </div>
   </div>
