--- a/src/app/contacts/contacts.component.scss
+++ b/src/app/contacts/contacts.component.scss
@@ -1,5 +1,5 @@
 contact-parent{
-    background: #fff;
+    background: rgb(14, 13, 13);
     display:flex;
     margin:80px 0;
 }
@@ -25,6 +25,12 @@ contact-parent{
     font-size:20px;
     text-shadow:0px 0px 2px #000;
 }
+.card {
+ 
+  background-color: black;
+ 
+}
+
  
 .child1 p span{
     font-size:16px;
@@ -35,6 +41,7 @@ contact-parent{
     flex-direction:column;
     justify-content:space-around;
     align-items:center;
+
 }
 
 .inside-contact{
