--- a/src/app/cv/certificates.component.html
+++ b/src/app/cv/certificates.component.html
@@ -1,164 +1,168 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
-  <div class="container-fluid">
-    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button> -->
-      <div class="navbar-nav mb-0 h4">
-        <a class="nav-link active" aria-current="page"  routerLink="/PersonalDetails">Home</a>
-        <a class="nav-link active" aria-current="page" routerLink="/About">About</a>
-        <a class="nav-link  active" aria-current="page"routerLink="/Certificates">Cv</a>
-        <a class="nav-link active" aria-current="page"routerLink="/Portfolio">Portfolio</a>
-        <a class="nav-link active"aria-current="page" routerLink="/Contacts">Contacts</a>
-      </div>
-  </div>
-</nav>
 
-<div class="resume">
-  <div class="base">
-    <div class="profile">
-      <div class="photo">
-        <!--<img src="" /> -->
-        <i class="fas fa-rocket"></i>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+ <div class="card text-bg-black mb-3">
+      <div class="card-body">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
+      <div class="container-fluid">
+        <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button> -->
+          <div class="navbar-nav mb-0 h4">
+            <a class="nav-link active" aria-current="page"  routerLink="/PersonalDetails">Home</a>
+            <a class="nav-link active" aria-current="page" routerLink="/About">About</a>
+            <a class="nav-link  active" aria-current="page"routerLink="/Certificates">Cv</a>
+            <a class="nav-link active" aria-current="page"routerLink="/Portfolio">Portfolio</a>
+            <a class="nav-link active"aria-current="page" routerLink="/Contacts">Contacts</a>
+          <a class='fas fa-map-marked-alt' routerLink="/UserLocation" style='font-size:48px;color:rgb(196, 47, 151)'></a>
+          </div>
       </div>
-      <div class="info">
-        <h1 class="name">Margret Mashego</h1>
-        <h2 class="job">Web Designer/Developer</h2>
-      </div>
-    </div>
-    <div class="about">
-      <h3>About Me</h3>I'm a Developer and Designer, specializing in web design, Experienced with alot of development tools, and creating responsive design.
-    </div>
-    <div class="contact">
-      <h3>Contact Me</h3>
-      <div class="call"><a href="tel:123-456-7890"><i class="fas fa-phone"></i><span>+27726874771</span></a></div>
-      <div class="address"><a href="https://goo.gl/maps/fiTBGT6Vnhy"><i class="fas fa-map-marker"></i><span>Moteti no61</span></a>
-      </div>
-      <div class="email"><a routerLink="thulisile.ma98@gmail.com"><i class="fas fa-envelope"></i><span>thulisile.ma98@gmail.com</span></a></div>
-      <div class="website"><a routerLink="http://astronaomical.com/" target="_blank"> <i class="fas fa-home"></i><span>astronaomical.com</span></a></div>
-    </div>
-    <div class="follow">
-      <h3>Follow Me</h3>
-      <div class="box">
-         <a class="fab fa-linkedin"aria-current="page" routerLink="https://www.linkedin.com/in/naomi-weatherford-758385112/"></a> 
-        <a class="fab fa-pinterest"aria-current="page" routerLink="https://www.pinterest.com/astronaomical/"></a>  
-        <a class="fab fa-instagram"aria-current="page" routerLink="https://www.instagram.com/"></a>   
-        <a class="fab fa-behance"aria-current="page" routerLink="https://www.facebook.com/angela"></a>   
-      </div>
-    </div>
-  </div>
-  <div class="func">
-    <div class="work">
-      <h3><i class="fa fa-briefcase"></i>Experience</h3>
-      <ul>
-        <li><span>Skill Development<br>Systems Developer Learnership</span><small>Dynamic dna</small><small>May - Now</small></li>
-        <li><span>Youth Leader</span><small>New Apostolic church</small><small>Jan 2016- Feb 2018</small></li>
-      </ul>
-    </div>
-    <div class="edu">
-      <h3><i class="fa fa-graduation-cap"></i>Education</h3>
-      <ul>
-        <li><span>Skills Programme<br>Web Design and Development</span><small>Dynamic Dna</small><small>Nov. 2021 - Jan. 2022</small></li>
-        <li><span>National Diploma IT</span><small>Tshwane University of Technology</small><small>jan. 2018 - Dec. 2021</small></li>
-        <li><span>High School</span><small>Dibatuto Secondary School</small><small>Jan. 2013 - Dec. 2016</small></li>
-      </ul>
-    </div>
-    <div class="skills-prog">
-      <h3><i class="fas fa-code"></i>Programming Skills</h3>
-      <ul>
-        <li data-percent="95"><span>HTML5</span>
-          <div class="skills-bar">
-            <div class="bar"></div>
-          </div>
-        </li>
-        <li data-percent="90"><span>CSS & SCSS</span>
-          <div class="skills-bar">
-            <div class="bar"></div>
-          </div>
-        </li>
-        <li data-percent="60"><span>JavaScript</span>
-          <div class="skills-bar">
-            <div class="bar"></div>
-          </div>
-        </li>
-        <li data-percent="50"><span>Java</span>
-          <div class="skills-bar">
-            <div class="bar"></div>
-          </div>
-        </li>
-        <li data-percent="40"><span>JSON</span>
-          <div class="skills-bar">
-            <div class="bar"></div>
-          </div>
-        </li>
-        <li data-percent="55"><span>C#</span>
-          <div class="skills-bar">
-            <div class="bar"></div>
-          </div>
-        </li>
 
-        <li data-percent="55"><span>JavaScript</span>
-          <div class="skills-bar">
-            <div class="bar"></div>
+     
+    </nav>
+      <div class="resume">
+      <div class="base">
+        <div class="profile">
+          <div class="photo">
+             <!-- <img src="https://highdefwallpaper.com/wp-content/uploads/2016/08/pink_water_lily_flower-wide.jpg"  alt="..."> -->
+            <i class="fas fa-rocket"></i>
           </div>
-        </li>
-        <li data-percent="40"><span>MySQL</span>
-          <div class="skills-bar">
-            <div class="bar"></div>
+          <div class="info">
+            <h1 class="name">Margret Angel Mashego</h1>
           </div>
-
-          <li data-percent="40"><span>Angular frameWork</span>
-          <div class="skills-bar">
-            <div class="bar"></div>
+        </div>
+        <div class="about">
+          <h3>About Me</h3>I'm a Developer and Designer, specializing in web design, Experienced with alot of development tools, and creating responsive design.
+        </div>
+        <div class="contact">
+          <h3>Contact Me</h3>
+          <div class="fas fa-phone"><span>+27726874771</span></div> <br>
+          <div class="fas fa-home"><span>Moteti no61</span><br>
           </div>
-          <li data-percent="40"><span>Ionic</span>
-          <div class="skills-bar">
-            <div class="bar"></div>
+          <div class="fas fa-envelope"><a routerLink="thulisile.ma98@gmail.com"><span>thulisile.ma98@gmail.com</span></a></div> <br>
+          <div class="fas fa-google"><a routerLink="http://mycv.com/" target="_blank"><span>astronaomical.com</span></a></div>
+        </div>
+        <div class="follow">
+          <h3>Follow Me</h3>
+          <div class="box">
+             <a class="fab fa-linkedin"aria-current="page" routerLink="linkedin.com/in/margret-mashego-3405311b9">linkedin</a> <br>
+            <a class="fab fa-pinterest"aria-current="page" routerLink="https://www.pinterest.com/astronaomical/">Website</a> <br> 
+            <a class="fab fa-instagram"aria-current="page" routerLink="https://www.instagram.com/">instagram</a>   <br>
+            <a class="fab fa-facebook"aria-current="page" routerLink="https://www.facebook.com/angela">facebook</a>   
           </div>
-
-        <li data-percent="40"><span>Atlassian Tools</span>
-          <div class="skills-bar">
-            <div class="bar"></div>
+        </div>
+      </div>
+      <div class="func">
+        <div class="work">
+          <h3><i class="fa fa-briefcase"></i>Experience</h3>
+          <ul>
+            <li><span>Skill Development<br>Systems Developer Learnership</span><small>Dynamic dna</small><small>May - Now</small></li>
+            <li><span>Youth Leader</span><small>New Apostolic church</small><small>Jan 2016- Feb 2018</small></li>
+          </ul>
+        </div>
+        <div class="edu">
+          <h3><i class="fa fa-graduation-cap"></i>Education</h3>
+          <ul>
+            <li><span>Skills Programme<br>Web Design and Development</span><small>Dynamic Dna</small><small>Nov. 2021 - Jan. 2022</small></li>
+            <li><span>National Diploma IT</span><small>Tshwane University of Technology</small><small>jan. 2018 - Dec. 2021</small></li>
+            <li><span>High School</span><small>Dibatuto Secondary School</small><small>Jan. 2013 - Dec. 2016</small></li>
+          </ul>
+        </div>
+        <div class="skills-prog">
+          <h3><i class="fas fa-code"></i>Programming Skills</h3>
+          <ul>
+            <li data-percent="95"><span>HTML5</span>
+              <div class="skills-bar">
+                <div class="bar"></div>
+              </div>
+            </li>
+            <li data-percent="95"><span>BOOTSTRAP</span>
+              <div class="skills-bar">
+                <div class="bar"></div>
+              </div>
+    
+            </li>
+            <li data-percent="90"><span>CSS & SCSS</span>
+              <div class="skills-bar">
+                <div class="bar"></div>
+              </div>
+            </li>
+            <li data-percent="60"><span>JavaScript</span>
+              <div class="skills-bar">
+                <div class="bar"></div>
+              </div>
+            </li>
+            <li data-percent="50"><span>Java</span>
+              <div class="skills-bar">
+                <div class="bar"></div>
+              </div>
+            </li>
+            <li data-percent="40"><span>JSON</span>
+              <div class="skills-bar">
+                <div class="bar"></div>
+              </div>
+            </li>
+            <li data-percent="55"><span>C#</span>
+              <div class="skills-bar">
+                <div class="bar"></div>
+              </div>
+            </li>
+            <li data-percent="40"><span>MySQL</span>
+              <div class="skills-bar">
+                <div class="bar"></div>
+              </div>
+    
+              <li data-percent="40"><span>Angular frameWork</span>
+              <div class="skills-bar">
+                <div class="bar"></div>
+              </div>
+              <li data-percent="40"><span>Ionic</span>
+              <div class="skills-bar">
+                <div class="bar"></div>
+              </div>
+    
+            <li data-percent="40"><span>Atlassian Tools</span>
+              <div class="skills-bar">
+                <div class="bar"></div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="skills-soft">
+          <h3><i class="fas fa-bezier-curve"></i>Soft Skills</h3>
+          <ul>
+            <li >
+              <svg viewbox="0 0 100 100">
+                <circle class="cbar" cx="80" cy="80" r="65"></circle>
+              </svg><span>leadership</span><small></small>
+            </li>
+            <li >
+              <svg viewbox="0 0 100 100">
+               <circle class="cbar" cx="80" cy="80" r="65"></circle>
+              </svg><span>Communication</span><small></small>
+            </li>
+            <li >
+              <svg viewbox="0 0 100 100">
+                <circle class="cbar" cx="80" cy="80" r="65"></circle>
+              </svg><span>Interpersonal</span><small></small>
+            </li>
+            <li >
+              <svg viewbox="0 0 100 100">
+              <circle class="cbar" cx="80" cy="80" r="65"></circle>
+              </svg><span>Critical Solving</span><small></small>
+            </li>
+          </ul>
+        </div>
+        <div class="interests">
+          <h3><i class="fas fa-star"></i>Certificates</h3>
+          <div class="interests-items">
+            <div class="art">JAVA SE8</div>
+            <div class="art">AZ-900</div>
+            <div class="movies">MATRIC</div>
+            <div class="music">LEMON</div>
           </div>
-        </li>
-      </ul>
-    </div>
-    <div class="skills-soft">
-      <h3><i class="fas fa-bezier-curve"></i>Software Skills</h3>
-      <ul>
-        <li data-percent="90">
-          <svg viewbox="0 0 100 100">
-            <circle cx="50" cy="50" r="45"></circle>
-            <circle class="cbar" cx="50" cy="50" r="45"></circle>
-          </svg><span>leadership</span><small></small>
-        </li>
-        <li data-percent="75">
-          <svg viewbox="0 0 100 100">
-            <circle cx="50" cy="50" r="45"></circle>
-            <circle class="cbar" cx="50" cy="50" r="45"></circle>
-          </svg><span>Communication</span><small></small>
-        </li>
-        <li data-percent="85">
-          <svg viewbox="0 0 100 100">
-            <circle cx="50" cy="50" r="45"></circle>
-            <circle class="cbar" cx="50" cy="50" r="45"></circle>
-          </svg><span>Interpersonal</span><small></small>
-        </li>
-        <li data-percent="65">
-          <svg viewbox="0 0 100 100">
-            <circle cx="50" cy="50" r="45"></circle>
-            <circle class="cbar" cx="50" cy="50" r="45"></circle>
-          </svg><span>Critical Solving</span><small></small>
-        </li>
-      </ul>
-    </div>
-    <div class="interests">
-      <h3><i class="fas fa-star"></i>Certificates</h3>
-      <div class="interests-items">
-        <div class="art"><i class="fas fa-car"></i><span>JAVA SE8</span></div>
-        <div class="art"><i class="fas fa-food"></i><span>AZ-900</span></div>
-        <div class="movies"><i class="fas fa-film"></i><span>MATRIC</span></div>
-        <div class="music"><i class="fas fa-headphones"></i><span>LEMON</span></div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
+      </div>
+    </div>
+    
