--- a/src/app/cv/certificates.component.scss
+++ b/src/app/cv/certificates.component.scss
@@ -38,6 +38,11 @@ ul {
 
 h2 {
 }
+.card {
+ 
+  background-color: black;
+ 
+}
 
 h3 {
   color: rgb(131, 32, 78);
@@ -95,11 +100,13 @@ h3 {
 .resume .base .profile .photo img {
   width: 100%;
   border-radius: 50%;
+ 
 }
 .resume .base .profile .photo {
-  display: flex;
+  display:flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 .resume .base .profile .fa-rocket {
   font-size: 100px;
@@ -115,7 +122,7 @@ h3 {
   margin-top: 10px;
   margin-bottom: 0;
   font-size: 1.75em;
-  text-transform: lowercase;
+  text-transform: uppercase;
   color: white;
 }
 .resume .base .profile .info .job {
@@ -152,7 +159,7 @@ h3 {
 .resume .base .contact div span::after {
   content: "";
   position: absolute;
-  background:rgb(131, 32, 78);
+  background:rgb(15, 15, 15);
   height: 1px;
   width: 0;
   bottom: 0;
@@ -162,10 +169,12 @@ h3 {
 .resume .base .follow .box {
   text-align: center;
   vertical-align: middle;
+  color: white;
 }
 .resume .base .follow .box a {
   display: inline-block;
   vertical-align: text-bottom;
+  color: white
 }
 .resume .base .follow .box a:hover i {
   background: rgb(131, 32, 78);
