--- a/src/app/personal-details/personal-details.component.html
+++ b/src/app/personal-details/personal-details.component.html
@@ -3,11 +3,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
+
+<body class="p-3 m-0 border-0 bd-example">
+  
+
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
   <div class="container-fluid">
     <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -18,15 +25,10 @@
         <a class="nav-link  active" aria-current="page"routerLink="/Certificates">Cv</a>
         <a class="nav-link active" aria-current="page"routerLink="/Portfolio">Portfolio</a>
         <a class="nav-link active"aria-current="page" routerLink="/Contacts">Contacts</a>
-        
+<a class='fas fa-map-marked-alt' routerLink="/UserLocation" style='font-size:48px;color:rgb(196, 47, 151)'></a>
       </div>
   </div>
 </nav>
-<body class="p-3 m-0 border-0 bd-example">
-  
-
-  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    
     <div class="carousel-inner">
       <div class="carousel-item active">
 
@@ -51,11 +53,11 @@
 
       <div class="carousel-item" >
         <img
-          src="https://www.jobboardfinder.com/news/wp-content/uploads/2017/09/ada-lovelace-woman-computer-programmer-e1460129211828-min-624x314.jpg"
+          src="https://wallpapercave.com/wp/wp9292572.jpg"
           class="d-block w-100" alt="...">
 
 <div class="carousel-caption d-none d-md-block justify-center">
-          <h3>
+          <h3 class="car2">
            I am a very dynamic individual who works hard, and knows how to balance working very hard and having fun.
            fun to work with and adapt easily, i love challenges and open to critiques.
 
@@ -70,14 +72,14 @@
           alt="...">
            
        <div class="carousel-caption d-none d-md-block justify-center">
-        <h2>favorite Quote</h2>
-          <h3>
+        <h1>favorite Quote</h1>
+          <h3 class="car3">
            "You dont need a Degree in computer science to work in tech
            you need gumption and focus, it's ok not to know everything ,
            <br> as long as you show that you are 
            intelligent enough to learn it" 
           </h3>
-          <h6>Lynn Root backend engineer for spotify</h6>
+          <h6 class="ref">Lynn Root backend engineer for spotify</h6>
       </div>
 
     </div>
