--- a/src/app/personal-details/personal-details.component.scss
+++ b/src/app/personal-details/personal-details.component.scss
@@ -16,6 +16,25 @@ z-index: 10;
 
 }
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+.car2{
+  color: #aaa9aa;
+}
+.car3{
+  color: #aaa9aa;
+}
+.ref{
+ background-color:  rgb(141, 8, 97);
+border-style: round($number: 0);
+
+}
+
 .btn{
 font-weight: 600;
   border-color: rgb(141, 8, 97);
