--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,8 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
+<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
   <div class="container-fluid">
-    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button> -->
+    
       <div class="navbar-nav mb-0 h4">
         <a class="nav-link active" aria-current="page"  routerLink="/PersonalDetails">Home</a>
         <a class="nav-link active" aria-current="page" routerLink="/About">About</a>
@@ -11,9 +9,46 @@
         <a class="nav-link active"aria-current="page" routerLink="/Contacts">Contacts</a>
       </div>
   </div>
+</nav> -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+<div class="card text-center">
+  <div class="card-header">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+      <div class="navbar-nav mb-0 h4">
+        <a class="nav-link active" aria-current="page"  routerLink="/PersonalDetails">Home</a>
+        <a class="nav-link active" aria-current="page" routerLink="/About">About</a>
+        <a class="nav-link  active" aria-current="page"routerLink="/Certificates">Cv</a>
+        <a class="nav-link active" aria-current="page"routerLink="/Portfolio">Portfolio</a>
+        <a class="nav-link active"aria-current="page" routerLink="/Contacts">Contacts</a>
+        <a class='fas fa-map-marked-alt' routerLink="/UserLocation" style='font-size:48px;color:rgb(196, 47, 151)'></a>
+      </div>
+  </div>
 </nav>
+  </div>
 
-<div class="card-group">
+  <div class="card  text-bg-dark mb-3">
+    <img src="https://www.pixelstalk.net/wp-content/uploads/2016/07/Landscape-mountains-nature-fog-pictures.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">ionic Weather Application</h5>
+      <p class="card-text">This is an ionic weather application using a  api from OpenweatherMap </p>
+    </div>
+    <div class="card-footer">
+       <a href="#" class="btn btn-secondary" >https://github.com/thulisile98/E-store</a>
+    </div>
+  <div class="card  text-bg-dark mb-3">
+    <img src="https://www.pixelstalk.net/wp-content/uploads/2016/07/Landscape-mountains-nature-fog-pictures.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">Ecommerce App</h5>
+      <p class="card-text">This is an ecommerce ionic application, selling iphones,laptops and perfumes Iam  using A free RestAPI (DummyJSON)   </p>
+    </div>
+    <div class="card-footer">
+      <a href="#" class="btn btn-secondary" >https://github.com/thulisile98/E-store</a>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="card-group">
   <div class="card  text-bg-dark mb-3">
     <img src="https://www.pixelstalk.net/wp-content/uploads/2016/07/Landscape-mountains-nature-fog-pictures.jpg" class="card-img-top" alt="...">
     <div class="card-body">
@@ -33,4 +68,4 @@
     <div class="card-footer">
        <a href="#" class="btn btn-secondary" >https://github.com/thulisile98/E-store</a>
     </div>
-  </div>
+  </div> -->
