--- a/src/app/user-location/user-location.component.html
+++ b/src/app/user-location/user-location.component.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-fill">
   <div class="container-fluid">
     <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,6 +11,7 @@
         <a class="nav-link  active" aria-current="page"routerLink="/Certificates">Cv</a>
         <a class="nav-link active" aria-current="page"routerLink="/Portfolio">Portfolio</a>
         <a class="nav-link active"aria-current="page" routerLink="/Contacts">Contacts</a>
+        <a class='fas fa-map-marked-alt' routerLink="/UserLocation" style='font-size:48px;color:rgb(196, 47, 151)'></a>
       </div>
   </div>
 </nav>
