ABOUT COMPONENT IS RESPONSIVE..

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -30,15 +30,24 @@
       <div class="card-body">
         <h1 class="card-title">About Me.</h1>
         <h3 class="title">Developer & Designer</h3>
-        <p class="card-text">A motivated software developer intern from Tshwane university of technology 
+         <P>
+          I am a very dynamic individual who works hard, and knows how to balance working very hard and having fun.
+           fun to work with and adapt easily, i love challenges and open to critiques.
+          My weakeness point would be "I have trouble saying No", simply because i love helping others
+           and my Strength would be that i am very much self-descipline.
+        </P>
+
+        <p class="card-text">A software developer intern from Tshwane university of technology 
             <br>with less than 1 year of experience in developing software applications<br>
              having a strong communication, leadership<br> and Coding skills.
         </p>
         <p>
-          I am a web developer. I can provide clean code and pixel perfect design,<br> my favourite programming language is C#
+         I can provide clean code and pixel perfect design,<br> my favourite programming language is C#
  and my first programming language was C++, I am Oracle Certified (Java OCA JSE8) And Microsoft Certified (AZ-900)
  <br> and I also completed my MTN Business App Academy Intermediate POE and obtained my Certificate of completion <br> and lastly I am  LEMON certified it is a  leadership skills training from Hosi Academy
         </p>
+
+       
          <div  class="row">
               <div class="col-lg-6">
                 <ul>
