--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -34,7 +34,7 @@
             </span>
          </p>
          <p>
-            <i class="fas fa-phone-alt"></i> Call me <br />
+            <i class="fas fa-phone"></i> Call <br />
             <span> 0726874771</span>
          </p>
          <p>
