--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -34,7 +34,8 @@
       <p class="card-text">This is an ionic weather application using a  api from OpenweatherMap </p>
     </div>
     <div class="card-footer">
-       <a href="#" class="btn btn-secondary" >https://github.com/thulisile98/E-store</a>
+      
+       <a routerLink="https://github.com/thulisile98/E-store" routerLinkActive="https://github.com/thulisile98/E-store">https://github.com/thulisile98/E-store</a>
     </div>
   <div class="card  text-bg-dark mb-3">
     <img src="https://www.pixelstalk.net/wp-content/uploads/2016/07/Landscape-mountains-nature-fog-pictures.jpg" class="card-img-top" alt="...">
