--- a/src/app/personal-details/personal-details.component.html
+++ b/src/app/personal-details/personal-details.component.html
@@ -41,7 +41,7 @@
 
           <h2 class="caption">Hey, my name is</h2>
           <h2 class="name"> Margret Mashego</h2> 
-          <h1 class="desc"> I'm a Developer</h1>
+          <h1 class="desc">I'm a Developer & Designer.</h1>
 
           <a routerLink=""class="btn">Download Cv</a>
           </div>
@@ -53,36 +53,23 @@
 
       <div class="carousel-item" >
         <img
-          src="https://wallpapercave.com/wp/wp9292572.jpg"
+          src="https://s3-ap-northeast-1.amazonaws.com/coconala-public-files/service_images/original/506e185d-16784.jpg"
           class="d-block w-100" alt="...">
 
 <div class="carousel-caption d-none d-md-block justify-center">
-          <h3 class="car2">
-           I am a very dynamic individual who works hard, and knows how to balance working very hard and having fun.
-           fun to work with and adapt easily, i love challenges and open to critiques.
 
-           My weakeness point would be "I have trouble saying No", simply because i love helping others
-           and my Strength would be that i am very much self-descipline
+           <h1 class="about">favorite Quote</h1>
+          <h3 class="car2">
+           "You dont need a Degree in computer science to work in tech <br>
+           you need gumption and focus, it's ok not to know everything ,
+           <br> As long as you show that you are 
+           intelligent enough to <br>learn it"
           </h3>
+          <h5 class="ref">"Lynn Root backend engineer for spotify"</h5>
         </div>
       </div>
 
-      <div class="carousel-item">
-        <img src="https://cdn.images.express.co.uk/img/dynamic/59/590x/secondary/MacBook-Air-2018-1476685.jpg?r=1535119547834" class="d-block w-100"
-          alt="...">
-           
-       <div class="carousel-caption d-none d-md-block justify-center">
-        <h1>favorite Quote</h1>
-          <h3 class="car3">
-           "You dont need a Degree in computer science to work in tech
-           you need gumption and focus, it's ok not to know everything ,
-           <br> as long as you show that you are 
-           intelligent enough to learn it" 
-          </h3>
-          <h6 class="ref">Lynn Root backend engineer for spotify</h6>
-      </div>
-
-    </div>
+      
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
