--- a/src/app/personal-details/personal-details.component.scss
+++ b/src/app/personal-details/personal-details.component.scss
@@ -16,23 +16,40 @@ z-index: 10;
 
 }
 
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
-}
+
 .car2{
-  color: #aaa9aa;
+  
+  color: rgb(124, 117, 117);
+  font-weight:500;
+   text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #000000 20%,
+    white 56%,
+   rgb(131, 32, 78) 100%,
+    grey 60%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+  font-family: fantasy;
+ 
 }
 .car3{
   color: #aaa9aa;
+  font-weight: 500;
+
+  font-size: larger;
 }
 .ref{
- background-color:  rgb(141, 8, 97);
-border-style: round($number: 0);
-
+color: white;
 }
 
 .btn{
@@ -51,7 +68,7 @@ color: rgb(141, 8, 97);
 {
     .nav-link{
         color: rgb(141, 8, 97);
-        font: 1em sans-serif;
+        // font: 1em sans-serif;
     }
    
 
@@ -85,7 +102,7 @@ position: sticky;
     color: rgb(218, 216, 216);
     font-size: larger;
     font-style: normal;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    // font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bolder;
     font-weight: 300;
     
@@ -123,22 +140,74 @@ position: sticky;
 
 
 .name{
-   
+    font-family: fantasy;
   color: rgb(131, 32, 78);
   font-size: 70px;
   font-weight: 500;
 }
 
 .caption{
-  
+  font-family: fantasy;
   font-size: 40px;
   font-weight: 500;
+}
+.quote{
+   font-family: fantasy;
+  color: rgb(131, 32, 78);
+  font-size: 70px;
+  font-weight: 500;
+
+}
+.about
+{
+   text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+   rgb(131, 32, 78) 67%,
+    #fff800 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+      font-size: 40px;
+      font-family: fantasy;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
 }
 .desc{
-
+  font-family: fantasy;
   font-size: 40px;
   font-weight: 500;
-
+  width: 44ch;
+  animation: typing 4s steps(27), blink .5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+ 
 }
 
+@keyframes typing {
+  from {
+    width: 0
+  }
+}
+    
+@keyframes blink {
+  50% {
+    border-color: transparent
+  }
+}
 
