improving my ui , displaying only the location and date plus weather without the map

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -3,7 +3,18 @@
    width: 100%;
    max-width: max-content;
 }
-
+.card-text{
+    color: rgb(241, 240, 240);
+}
+.do{
+    color: rgb(241, 240, 240);
+}
+.row{
+   color: rgb(241, 240, 240);  
+}
+.me{
+    color: rgb(241, 240, 240);
+}
 .card-title{
    font-size: larger;
    font-weight: 600;
