--- a/src/app/user-location/user-location.component.html
+++ b/src/app/user-location/user-location.component.html
@@ -71,7 +71,7 @@
   </div>
 </nav>
 <div class="card text-bg-dark">
-  <img src="https://wallpapercave.com/wp/wp6591478.jpg" class="card-img" alt="...">
+  <img src="https://wallpaperaccess.com/full/701617.jpg" class="card-img" alt="...">
   <div class="card-img-overlay">
    
     <div class="card-body text-center">
@@ -80,17 +80,17 @@
   <span class="city"> {{weather.name}},  {{weather.sys.country}}</span>
   <br>
   
-  <span class="date">{{date | date :'yyyy-MMMM-dd  HH:mm'}}</span><br>
+  <span class="date">{{date | date :'yyyy-MMMM-dd    HH:mm'}}</span><br>
  
   <div class="icon">
-      <img src="http://openweathermap.org/img/wn/{{weather.weather[0].icon}}@2x.png"  alt="">
+      <img src="http://openweathermap.org/img/wn/{{weather.weather[0].icon}}@4x.png"  alt=""><img src="http://openweathermap.org/img/wn/{{weather.weather[0].icon}}@4x.png"  alt="">
     </div>
     <span class="description">{{weather.weather[0].description}}</span>
 
  <br>
-<span class="humidity"><a>humidity</a>{{weather.main.humidity}}%</span>
+<span class="humidity"><a>humidity    </a>{{weather.main.humidity}}%</span>
 <br>
-<span class="pressure"><a>pressure</a>{{weather.main.humidity}}hpa</span><br>
+<span class="pressure"><a>pressure    </a>{{weather.main.humidity}}hpa</span><br>
  </div>
   </div>
 </div>
