--- a/src/app/user-location/user-location.component.scss
+++ b/src/app/user-location/user-location.component.scss
@@ -10,53 +10,54 @@
 }
 .description
 {font-weight: 500;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: fantasy;
     font-size: xx-large;
-    color: rgb(0, 0, 0);
-    text-align: center;
+   color:white;
+   text-shadow:  2px 4px rgb(141, 8, 97);
 }
+
 .city{
+    font-family: fantasy;
     font-weight: 500;
-    font-family: 'Times New Roman', Times, serif;
     font-size: xx-large;
-    color: rgb(0, 0, 0);
-text-align: center;
+color:white;
+text-shadow:  2px 4px rgb(141, 8, 97);
 }
 
 .date{
     font-weight: 500;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: fantasy;
     font-size: xx-large;
-    color: rgb(0, 0, 0);
-text-align: center;
+  color:white;
+  text-shadow:  2px 4px rgb(141, 8, 97);
 
 }
 .humidity{
     font-weight: 500;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: fantasy;
     font-size: xx-large;
-    color: rgb(0, 0, 0);
-    text-align: center;
+    color:white;
+    text-shadow:  2px 4px rgb(141, 8, 97);
+    
 
 }
 .percipitation{
     font-weight: 500;
      font: bolder;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: fantasy;
     font-size: xx-large;
-color: rgb(0, 0, 0);
-text-align: center;
+color:white;
+text-shadow:  2px 4px rgb(141, 8, 97);
+
 
 }
 .pressure{
      font-weight: 500;
      font: bolder;
-   font-family: 'Times New Roman', Times, serif;
+   font-family: fantasy;
     font-size: xx-large;
-   color: rgb(0, 0, 0);
+   color:white;
+   text-shadow:  2px 4px rgb(141, 8, 97);
    
 
-}
-.card{
-background-image: image("http://d2uqfpnktc64mn.cloudfront.net/uploads/competition/image/000/000/151/Beautiful-Weather2.jpg");
 }
