--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -30,7 +30,7 @@
       <div class="card-body">
         <h1 class="card-title">About Me.</h1>
         <h3 class="title">Developer & Designer</h3>
-         <P>
+         <P class="me">
           I am a very dynamic individual who works hard, and knows how to balance working very hard and having fun.
            fun to work with and adapt easily, i love challenges and open to critiques.
           My weakeness point would be "I have trouble saying No", simply because i love helping others
@@ -41,7 +41,7 @@
             <br>with less than 1 year of experience in developing software applications<br>
              having a strong communication, leadership<br> and Coding skills.
         </p>
-        <p>
+        <p class="do">
          I can provide clean code and pixel perfect design,<br> my favourite programming language is C#
  and my first programming language was C++, I am Oracle Certified (Java OCA JSE8) And Microsoft Certified (AZ-900)
  <br> and I also completed my MTN Business App Academy Intermediate POE and obtained my Certificate of completion <br> and lastly I am  LEMON certified it is a  leadership skills training from Hosi Academy
@@ -52,7 +52,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>11 July 1998</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.anegel.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://thulisile98.github.io.MyCv/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+27 72 687 4771</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Gauteng</span></li>
                 </ul>
