--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -28,17 +28,16 @@
   </div>
 
   <div class="card  text-bg-dark mb-3">
-    <img src="https://www.pixelstalk.net/wp-content/uploads/2016/07/Landscape-mountains-nature-fog-pictures.jpg" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">ionic Weather Application</h5>
       <p class="card-text">This is an ionic weather application using a  api from OpenweatherMap </p>
     </div>
     <div class="card-footer">
       
-       <a routerLink="https://github.com/thulisile98/E-store" routerLinkActive="https://github.com/thulisile98/E-store">https://github.com/thulisile98/E-store</a>
+       <a routerLink="https://github.com/thulisile98/ionicWeatherRepo" routerLinkActive="https://github.com/thulisile98/ionicWeatherRepo">https://github.com/thulisile98/ionicWeatherRepo</a>
     </div>
   <div class="card  text-bg-dark mb-3">
-    <img src="https://www.pixelstalk.net/wp-content/uploads/2016/07/Landscape-mountains-nature-fog-pictures.jpg" class="card-img-top" alt="...">
+    <img src="https://i.pinimg.com/originals/9b/7b/29/9b7b292726c7d333b299ea6df75fac02.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">Ecommerce App</h5>
       <p class="card-text">This is an ecommerce ionic application, selling iphones,laptops and perfumes Iam  using A free RestAPI (DummyJSON)   </p>
@@ -49,24 +48,3 @@
   </div>
 </div>
 
-<!-- <div class="card-group">
-  <div class="card  text-bg-dark mb-3">
-    <img src="https://www.pixelstalk.net/wp-content/uploads/2016/07/Landscape-mountains-nature-fog-pictures.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Ecommerce App</h5>
-      <p class="card-text">This is an ecommerce ionic application, selling iphones,laptops and perfumes Iam  using A free RestAPI (DummyJSON)   </p>
-    </div>
-    <div class="card-footer">
-      <a href="#" class="btn btn-secondary" >https://github.com/thulisile98/E-store</a>
-    </div>
-  </div>
-  <div class="card  text-bg-dark mb-3">
-    <img src="https://www.pixelstalk.net/wp-content/uploads/2016/07/Landscape-mountains-nature-fog-pictures.jpg" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">ionic Weather Application</h5>
-      <p class="card-text">This is an ionic weather application using a  api from OpenweatherMap </p>
-    </div>
-    <div class="card-footer">
-       <a href="#" class="btn btn-secondary" >https://github.com/thulisile98/E-store</a>
-    </div>
-  </div> -->
