changed nav icon to userlocation

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -10,41 +10,44 @@
       </div>
   </div>
 </nav> -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+  integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <div class="card text-center">
   <div class="card-header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-      <div class="navbar-nav mb-0 h4">
-        <a class="nav-link active" aria-current="page"  routerLink="/PersonalDetails">Home</a>
-        <a class="nav-link active" aria-current="page" routerLink="/About">About</a>
-        <a class="nav-link  active" aria-current="page"routerLink="/Certificates">Cv</a>
-        <a class="nav-link active" aria-current="page"routerLink="/Portfolio">Portfolio</a>
-        <a class="nav-link active"aria-current="page" routerLink="/Contacts">Contacts</a>
-        <a class='fas fa-map-marked-alt' routerLink="/UserLocation" style='font-size:48px;color:rgb(196, 47, 151)'></a>
+      <div class="container-fluid">
+        <div class="navbar-nav mb-0 h4">
+          <a class="nav-link active" aria-current="page" routerLink="/PersonalDetails">Home</a>
+          <a class="nav-link active" aria-current="page" routerLink="/About">About</a>
+          <a class="nav-link  active" aria-current="page" routerLink="/Certificates">Cv</a>
+          <a class="nav-link active" aria-current="page" routerLink="/Portfolio">Portfolio</a>
+          <a class="nav-link active" aria-current="page" routerLink="/Contacts">Contacts</a>
+          <a class="nav-link active" aria-current="page" routerLink="/UserLocation">UserLocation</a>
+        </div>
       </div>
-  </div>
-</nav>
+    </nav>
   </div>
 
   <div class="card  text-bg-dark mb-3">
     <div class="card-body">
       <h5 class="card-title">ionic Weather Application</h5>
-      <p class="card-text">This is an ionic weather application using a  api from OpenweatherMap </p>
+      <p class="card-text">This is an ionic weather application using a api from OpenweatherMap </p>
     </div>
     <div class="card-footer">
-      
-       <a routerLink="https://github.com/thulisile98/ionicWeatherRepo" routerLinkActive="https://github.com/thulisile98/ionicWeatherRepo">https://github.com/thulisile98/ionicWeatherRepo</a>
+
+      <a routerLink="https://github.com/thulisile98/ionicWeatherRepo"
+        routerLinkActive="https://github.com/thulisile98/ionicWeatherRepo">https://github.com/thulisile98/ionicWeatherRepo</a>
     </div>
-  <div class="card  text-bg-dark mb-3">
-    <img src="https://i.pinimg.com/originals/9b/7b/29/9b7b292726c7d333b299ea6df75fac02.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Ecommerce App</h5>
-      <p class="card-text">This is an ecommerce ionic application, selling iphones,laptops and perfumes Iam  using A free RestAPI (DummyJSON)   </p>
-    </div>
-    <div class="card-footer">
-      <a href="#" class="btn btn-secondary" >https://github.com/thulisile98/E-store</a>
+    <div class="card  text-bg-dark mb-3">
+      <img src="https://i.pinimg.com/originals/9b/7b/29/9b7b292726c7d333b299ea6df75fac02.png" class="card-img-top"
+        alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Ecommerce App</h5>
+        <p class="card-text">This is an ecommerce ionic application, selling iphones,laptops and perfumes Iam using A
+          free RestAPI (DummyJSON) </p>
+      </div>
+      <div class="card-footer">
+        <a href="#" class="btn btn-secondary">https://github.com/thulisile98/E-store</a>
+      </div>
     </div>
   </div>
-</div>
-
