--- a/src/app/personal-details/personal-details.component.scss
+++ b/src/app/personal-details/personal-details.component.scss
@@ -1,4 +1,25 @@
+.flex-grid-col {
+  display: flex;
+}
 
+.p-3{
+
+      display:inline;
+
+}
+
+ 
+@media (max-width: 500px) {
+  .flex-grid-col {
+    display: block;
+  }
+  .col {
+    flex: 1;
+  }
+  .txt-col {
+    flex: 2;
+  }
+}
 .navbar 
 {
 width: 270;
@@ -49,7 +70,10 @@ z-index: 10;
   font-size: larger;
 }
 .ref{
+
 color: white;
+text-shadow:  2px 4px rgb(141, 8, 97);
+font-family: fantasy;
 }
 
 .btn{
@@ -150,6 +174,7 @@ position: sticky;
   font-family: fantasy;
   font-size: 40px;
   font-weight: 500;
+  text-shadow:  2px 4px rgb(141, 8, 97);
 }
 .quote{
    font-family: fantasy;
@@ -196,18 +221,23 @@ position: sticky;
   white-space: nowrap;
   overflow: hidden;
   border-right: 3px solid;
+  text-shadow:  2px 4px rgb(141, 8, 97);
+  //  display: inline-block;
+
  
 }
 
 @keyframes typing {
   from {
     width: 0
+   
   }
 }
     
 @keyframes blink {
   50% {
-    border-color: transparent
+    border-color: transparent,
+   
   }
 }
 
