--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -22,7 +22,7 @@
           <a class="nav-link  active" aria-current="page" routerLink="/Certificates">Cv</a>
           <a class="nav-link active" aria-current="page" routerLink="/Portfolio">Portfolio</a>
           <a class="nav-link active" aria-current="page" routerLink="/Contacts">Contacts</a>
-          <!-- <a class="nav-link active" aria-current="page" routerLink="/UserLocation">UserLocation</a> -->
+          <a class="nav-link active" aria-current="page" routerLink="/UserLocation">UserLocation</a>
         </div>
       </div>
     </nav>
